--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://@database_host@:@database_port@/@database_name@?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=@database_username@
+spring.datasource.password=@database_password@
